# can_device_interface

./: .gitignore  CMakeLists.txt  README.md
include/: CANDevice.h
src/: CANDevice.cpp
